--- a/_config.yml
+++ b/_config.yml
@@ -4,3 +4,6 @@ highlighter: pygments
 description: "Write an awesome description for your new site here. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
 #url: "http://yourdomain.com"
 #baseurl: /cs
+
+gems:
+  - jekyll-sitemap
